--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,11 +9,14 @@ jobs:
   deploy:
     name: AWS EC2 Deployment
     runs-on: ubuntu-latest
-    # SET UP ENVIRONMENT IN GITHUB WITH PROPER PRODUCTION DEPLOYMENT ENVIRONMENT VARIABLES
     environment: production
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Setup environment variable file
+        run: |
+          printf '%s\n' '${{secrets.CONFIG_JSON}}' > config.json
 
       - name: Deploy to AWS EC2
