--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -3,7 +3,8 @@ name: Pull Request
 on:
   pull_request:
     branches:
-      - [ main, dev ]
+      - main
+      - dev
   schedule:
     - cron: '0 6 * * *'
 
