--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chai-http": "^4.3.0",
     "mocha": "^9.2.0",
     "mocha-prepare": "^0.1.0",
-    "mongodb-memory-server": "^8.2.0"
+    "mongodb-memory-server": "^8.2.0",
+    "pm2": "^5.1.2"
   }
 }
