--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "dotenv": "^14.3.2",
+    "eslint": "^8.8.0",
     "express": "^4.17.2",
     "mongodb": "^4.3.1"
   },
