#4 try again to trigger manual deployment option

--- a/.github/workflows/aws_deploy.yml
+++ b/.github/workflows/aws_deploy.yml
@@ -1,11 +1,11 @@
-name: Deploy
+name: Manual AWS Deploy
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
 
 jobs:
   deploy:
-    name: AWS EC2 Deployment
+    name: Deploy to AWS
     runs-on: ubuntu-latest
     environment: testing
 
