--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Install eslint
         run: npm install eslint
 
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - name: Run ESLint
         run: npx eslint . --ext .js,.jsx,.ts,.tsx
 
