--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "dotenv": "^14.3.2",
-    "eslint": "^8.8.0",
     "express": "^4.17.2",
     "mongodb": "^4.3.1"
   },
   "devDependencies": {
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
     "mocha": "^9.2.0",
     "mocha-prepare": "^0.1.0",
     "mongodb-memory-server": "^8.2.0",
