--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,11 +11,11 @@ jobs:
     name: ESLint
     runs-on: ubuntu-latest
     steps:
-      - name: Install eslint
-        run: npm install eslint
-
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: npm install
 
       - name: Run ESLint
         run: npx eslint . --ext .js,.jsx,.ts,.tsx
