#20 ready to test link create

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-DB_URI=YouMongoDBConnectionString
+DB_URI=YourMongoDBConnectionURI
 
+# Environment: default is dev, set to "test" automatically during unit testing
 NODE_ENV=dev
-# default to "dev"
-# Is set to "test" automatically during unit testing
+
+# Plaid account details
+PLAID_APP_NAME=YourAppName
+PLAID_CLIENT_ID=YourPlaidClientID
+PLAID_SECRET=YourPlaidSecret
