--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "body-parser": "^1.19.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
-    "mongodb": "^4.3.1"
+    "express-openapi-validator": "^4.13.5",
+    "mongodb": "^4.3.1",
+    "plaid": "^9.10.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
