Add JWT authentication

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ DB_URI=YouMongoDBConnectionString
 NODE_ENV=dev
 # default to "dev"
 # Is set to "test" automatically during unit testing
+
+JWT_SECRET=64byteSecret
+# Generate secret here
+# Can use require('crypto').randomBytes(64).toString('hex')
+
+JWT_EXPIRE=1800s
