--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "crypto": "^1.0.1",
     "dotenv": "^14.3.2",
     "eslint": "^8.8.0",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1"
   },
   "devDependencies": {
