--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,15 @@
-DB_URI=YouMongoDBConnectionString
+DB_URI=YourMongoDBConnectionURI
 
+# Environment: default is dev, set to "test" automatically during unit testing
 NODE_ENV=dev
-# default to "dev"
-# Is set to "test" automatically during unit testing
 
 JWT_SECRET=64byteSecret
 # Generate secret here
 # Can use require('crypto').randomBytes(64).toString('hex')
 
 JWT_EXPIRE=1800s
+
+# Plaid account details
+PLAID_APP_NAME=YourAppName
+PLAID_CLIENT_ID=YourPlaidClientID
+PLAID_SECRET=YourPlaidSecret
