--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.3.1"
+    "mongodb": "^4.3.1",
+    "plaid": "^9.10.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
