--- a/lantern.yaml
+++ b/lantern.yaml
@@ -105,7 +105,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PlaidLinkToken'
+                $ref: '#/components/schemas/Token'
           description: Successfully created link token
       security:
       - clientToken: []
@@ -261,10 +261,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ClientAuthToken'
+                $ref: '#/components/schemas/Token'
           description: User account created
-      security:
-      - clientToken: []
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Email already in use!
       operationId: registerUser
       summary: Register a new user and initialize their account
   /:
@@ -277,6 +281,33 @@ paths:
               schema:
                 $ref: '#/components/schemas/Message'
           description: Get ok
+  /api/users/update:
+    summary: For updating user information
+    post:
+      requestBody:
+        description: UserBio
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserBio'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Message'
+          description: Updated user
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Message'
+          description: Error
+      security:
+      - clientToken: []
+      operationId: updateUserProfile
+      summary: Update user bio information
 components:
   schemas:
     User:
@@ -294,13 +325,9 @@ components:
           description: User registration info
     Error:
       required:
-      - code
       - message
       type: object
       properties:
-        code:
-          description: Error code
-          type: integer
         message:
           description: Error message
           type: string
