--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
-    "express-validator": "^6.14.0",
+    "express-openapi-validator": "^4.13.5",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1",
     "plaid": "^9.10.0"
