--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -20,6 +20,13 @@ jobs:
       - name: Run ESLint
         run: npx eslint . --ext .js,.jsx,.ts,.tsx --fix
 
+      - name: Commit ESLint fixes
+        run: |
+          git config --global user.name 'Lantern Developers'
+          git config --global user.email 'lanterndevelopers@gmail.com'
+          git diff --quiet && git diff --staged --quiet || git commit -am "ESLint automated fixes"
+          git push
+
   scan:
     name: CodeQL Security Scan
     runs-on: ubuntu-latest
