--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run ESLint and commit ESLint fixes if present
+      - name: Run ESLint
         run: |
           npx eslint . --ext .js,.jsx,.ts,.tsx --fix
 
@@ -27,7 +27,7 @@ jobs:
           git config --global user.name 'Lantern Developers'
           git config --global user.email 'lanterndevelopers@gmail.com'
           (git diff --quiet && git diff --staged --quiet) || git commit -am "ESLint automated fixes"
-          git push
+          git push origin HEAD:${GITHUB_REF##*/}
 
   scan:
     name: CodeQL Security Scan
