--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -27,7 +27,7 @@ jobs:
           git config --global user.name 'Lantern Developers'
           git config --global user.email 'lanterndevelopers@gmail.com'
           (git diff --quiet && git diff --staged --quiet) || git commit -am "ESLint automated fixes"
-          git push origin HEAD:${GITHUB_REF##*/}
+          git push origin HEAD:${GITHUB_REF#refs/heads/}
 
   scan:
     name: CodeQL Security Scan
