--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,6 @@ JWT_SECRET=64byteSecret
 JWT_EXPIRE=1800s
 
 # Plaid account details
-PLAID_APP_NAME=YourAppName
-PLAID_CLIENT_ID=YourPlaidClientID
-PLAID_SECRET=YourPlaidSecret
+PLAID_APP_NAME=sandbox
+PLAID_CLIENT_ID=61f0600080e350001b136bd8
+PLAID_SECRET=c8ef55da111625cb3373913d943411
