--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "express-openapi-validator": "^4.13.5",
+    "express-rate-limit": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1",
     "plaid": "^9.10.0"
