--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
