--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --require test/prepare test/allTests.js --exit"
+    "test": "nyc mocha --require test/prepare test/allTests.js --exit"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1",
+    "nyc": "^15.1.0",
     "plaid": "^9.10.0"
   },
   "devDependencies": {
