--- a/lantern.yaml
+++ b/lantern.yaml
@@ -109,6 +109,26 @@ paths:
     summary: Path used to request transactions
     description: ""
     get:
+      parameters:
+      - name: start_date
+        description: "Number of transactions to offset by, for pagination purposes"
+        schema:
+          format: date
+          type: string
+        in: query
+        required: false
+      - name: end_date
+        description: End date of transactions to fetch
+        schema:
+          format: date
+          type: string
+        in: query
+      - name: offset
+        description: Page of transactions to fetch
+        schema:
+          type: integer
+        in: query
+        required: false
       responses:
         "200":
           content:
