Update .env.example for new variables

--- a/.env.example
+++ b/.env.example
@@ -3,15 +3,18 @@ DB_URI=YourMongoDBConnectionURI
 # Environment: default is dev, set to "test" automatically during unit testing
 NODE_ENV=dev
 
-JWT_SECRET=64byteSecret
-# Generate secret here
-# Can use require('crypto').randomBytes(64).toString('hex')
-
-JWT_EXPIRE=1800s
-
 # Plaid account details
 PLAID_APP_NAME=YourAppName
 PLAID_CLIENT_ID=YourPlaidClientID
 PLAID_SECRET=YourPlaidSecret
 
+# Generate secret here
+# Can use require('crypto').randomBytes(64).toString('hex')
+JWT_SECRET=64byteSecret
+JWT_EXPIRE=1800s
+
+# AES Key (KEEP SAFE!)
+AES_KEY=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32
+
 SERVER_PORT=8000
+
